♻️ Refactor: Channel 관련 로직 리팩토링 및 Query 계층 도입
- `ChannelFacadeMapper` 삭제 및 관련 호출 코드 제거
- `QueryChannelService` 및 `QueryChannelRepository` 추가
- `ChannelMapper` 수정: `ChannelInfoQuery` 기반 DTO 변환 로직 추가
- 중복 코드 제거 및 유지보수성 개선
- `ChannelController` 및 Facade 계층 업데이트 반영